Update file paths in properties and adjust keyboard shortcuts for menu items